[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8"}
reqwest = { version = "0.12" ,features = ["stream","json"]}
tokio = { version = "1", features = ["full"] }
tower = {version = "0.5"}
tower-http = { version = "0.6",features = ["limit"]}
tracing = "0.1"
tracing-subscriber = {version="0.3", features = ["env-filter","registry", "std", "fmt"]}
opentelemetry = { version = "0.29"}
opentelemetry_sdk = {version = "0.29"}
opentelemetry-stdout= {version = "0.29"}
opentelemetry-otlp = {version = "0.29"}
opentelemetry-http = {version = "0.29"}
opentelemetry-appender-tracing= {version = "0.29"}
tracing-opentelemetry = "0.30.0"
opentelemetry-jaeger-propagator = "0.29.0"
once_cell = "1.21"
dotenvy = {"version"  = "0.15"}
server-common = { path = "../../packages/server-common" }
serde_json = "1.0"
url = "2.5"
uuid = { version = "1.17",features = ["v4"]}
chrono = { version = "0.4" }